# grok-root

./: .env.example  .gitattributes  .gitignore  AGENTS.md  MEMORY.md  README.md  kaleidoscope (1).html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-task.md
.github/workflows/: blog-pages.yml
00_Inbox/: git-cheatsheet.md  goal.md
02_Experiments/prototype-snapshots/: README.md
05_Operations/: company-computer-co-teacher-runbook-2026-06-15.md  company-workspace-inventory-2026-06-16.md  local-workspace-recovery-map-2026-06-15.md  outputs-inventory-2026-06-15.md  picopico-inspiration-review-2026-06-16.md  picopico-sensitive-assets-inventory-2026-06-16.md  top-level-workspace-inventory-2026-06-15.md
docs/: AI_HANDBOOK.md  DECISIONS.md  ENGINEERING_HABITS.md  PROJECT_MAP.md  USER_MANUAL.md  blog-ui-guidelines-v1.md  deploy-blog-pages-v1.md  engineering-collab-contract.md  week1-hello-repo-issue.md  week2-blog-program-single-source.md  week2-english-blog-issue.md  week2-issue-A-acceptance-report.md  week2-issue-A-astro-migration-tags.md  week2-issue-B-acceptance-report.md  week2-issue-B-ui-refresh-v1.md  week2-issue-C-acceptance-report.md  week2-issue-C-newsletter-v1.md  week2-issue-D-acceptance-report.md  week2-issue-D-comments-giscus.md  week2-issue-E-acceptance-report.md  week2-issue-E-deploy-ready-v1.md
prompts/: end-task.md  start-task.md  weekly-review.md
scripts/: all.sh  blog-check.sh  build.sh  github-mirror-sync.sh  install-github-mirror-launchd.sh  lint.sh  test.sh
src/trace_cli/: __init__.py  (+1 more)
tests/: test_cli.py
(+119 files in other folders)
